<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogLayout"
    android:layout_width="268dp"
    android:layout_height="345dp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_guideLine_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="285dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TopDialogLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/dialog_guideLine_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RadioGroupLeftGuideLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RadioGroupRightGuideLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />


        <ImageView
            android:id="@+id/TopBgView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_dialog_top"
            app:layout_constraintBottom_toTopOf="@+id/TitleLineView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />


        <TextView
            android:id="@+id/DialogTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_setting_dialog_title"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/TitleLineView"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DialogTitleView"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#E0E3DA"
            android:text="@string/game_setting_dialog_mode_title"
            app:layout_constraintBottom_toTopOf="@+id/GameModeRadioGroup"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleLineView"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/GameModeTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/game_setting_dialog_mode_title"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleLineView"
            app:layout_constraintVertical_bias="0" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ffffff"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameModeTitleView"
            app:layout_constraintBottom_toTopOf="@+id/GameModeLineView"/>

        <RadioGroup
            android:id="@+id/GameModeRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toRightOf="@+id/RadioGroupLeftGuideLine"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameModeTitleView"
            app:layout_constraintVertical_bias="0.02">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/ModeHunMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_setting_dialog_mode_hunmin" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/ModeKungKung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_setting_dialog_mode_kung" />

        </RadioGroup>


        <TextView
            android:id="@+id/GameModeLineView"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameModeRadioGroup"
            app:layout_constraintVertical_bias="0" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#E0E3DA"
            android:text="@string/game_setting_dialog_mode_title"
            app:layout_constraintBottom_toTopOf="@+id/LengthRadioGroup"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameModeLineView"
            app:layout_constraintVertical_bias="0" />


        <TextView
            android:id="@+id/LengthTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/game_setting_dialog_length_title"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GameModeLineView"
            app:layout_constraintVertical_bias="0" />



        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ffffff"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LengthTitleView"
            app:layout_constraintBottom_toTopOf="@+id/LengthLineView"/>

        <RadioGroup
            android:id="@+id/LengthRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toRightOf="@+id/RadioGroupLeftGuideLine"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LengthTitleView"
            app:layout_constraintVertical_bias="0.08">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/Length2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_setting_dialog_length_2" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/Length3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_setting_dialog_length_3" />

        </RadioGroup>


        <TextView
            android:id="@+id/LengthLineView"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LengthRadioGroup"
            app:layout_constraintVertical_bias="0.01" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#E0E3DA"
            android:text="@string/game_setting_dialog_mode_title"
            app:layout_constraintBottom_toTopOf="@+id/TimeRadioGroup"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LengthLineView"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/TimeTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/game_setting_dialog_time_title"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LengthLineView"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ffffff"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TimeTitleView"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RadioGroup
            android:id="@+id/TimeRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toRightOf="@+id/RadioGroupLeftGuideLine"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TimeTitleView"
            app:layout_constraintVertical_bias="0.5">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/Time10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_setting_dialog_time_10" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/Time20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_setting_dialog_time_20" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Bottom_Btn_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/LeftBottomImg"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:background="@drawable/background_dialog_bottom_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="1dp"
        app:layout_constraintRight_toLeftOf="@+id/Bottom_Btn_guideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />


    <ImageView
        android:id="@+id/RigntBottomImg"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="1dp"
        android:background="@drawable/background_dialog_bottom_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/Bottom_Btn_guideLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:background="#ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/LeftBottomImg"
        app:layout_constraintRight_toLeftOf="@+id/RigntBottomImg"/>


    <TextView
        android:id="@+id/ConfirmBtnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_setting_dialog_confirm_btn"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/CancelBtnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_setting_dialog_cancel_btn"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />


</androidx.constraintlayout.widget.ConstraintLayout>